# TypeCompose

./: .gitignore  CHANGES  Makefile  README  README.md  Setup.lhs  TypeCompose.cabal  shell.nix  stack.yaml  wikipage.tw
src/Control/: Compose.hs  DataDriven.hs  Instances.hs
src/Data/: Adorn.hs  Bijection.hs  CxMonoid.hs  Fun.hs  Lambda.hs  Pair.hs  Partial.hs  RefMonad.hs  Title.hs  Zip.hs
