Name:                TypeCompose
Version:             0.2
Synopsis: 	     Type composition classes & instances
Category:            Composition, Control
Description:
  TypeCompose provides some classes & instances for forms of type
  composition, as well as some modules who haven't yet found a home.
  .
  See also
  .
  * The project wiki page: <http://haskell.org/haskellwiki/TypeCompose>
  .
  * Use of TypeCompose in
  ** DataDriven : <http://haskell.org/haskellwiki/DataDriven>
  ** Phooey     : <http://haskell.org/haskellwiki/Phooey>
  ** Eros       : <http://haskell.org/haskellwiki/Eros>
  .
  The module documentation pages have links to colorized source code and
  to wiki pages where you can read and contribute /user comments/.  Enjoy!
  .
  &#169; 2007 by Conal Elliott; BSD3 license.
Author:              Conal Elliott 
Maintainer:          conal@conal.net
Homepage:            http://haskell.org/haskellwiki/TypeCompose
Package-Url:	     http://darcs.haskell.org/packages/TypeCompose
Copyright:           (c) 2007 by Conal Elliott
License:             BSD3
Stability:           provisional
Hs-Source-Dirs:      src
Extensions:          
Build-Depends:       base
Exposed-Modules:     
                     Data.Bijection
                     Data.CxMonoid
                     Data.RefMonad
                     Data.Pair
                     Data.Fun
                     Data.Title
                     Control.Instances
                     Control.Compose
Extra-Source-Files:
ghc-options:         -O -Wall
